--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
               apple.com/kr/ipad/cellular를 참고하십시오.
             </li>
             <li id="footnote4">
-              Apple Pencil(1세대) 및 Smart Keyboard는 별도로 판매됩니다.</li>
+              Apple Pencil(1세대) 및 Smart Keyboard는 별도로 판매됩니다.
             </li>
           </ol>
           <ul>
